--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ img {
 	background-color: #303239; 
 }
 .side-bar {
-	background-color: #384047; 
+	background-color: #ccc;
 } 
 	
 /* Main Layout Styles
@@ -36,9 +36,12 @@ img {
 .side-bar a {
 	display: block;
 	text-align: center;
-	color: white;
+	border-radius: 2px;
 	text-decoration: none;
 	padding: 10px 20px;
+}
+.side-tab a {
+	color: black;
 }
 .main-nav a:hover,
 .side-bar a:hover  { 
@@ -84,21 +87,28 @@ img {
 	.nav-container {
 		position: relative;
 		width: 100%;
-		height: 32px;
 		text-align: center;
 		padding-top: 0;
 	}
-	
-	.main-nav li {
-		width: 15%;
-		display: inline-block;
-	}
-	.main-nav a {
+	.main-nav {
 		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.main-nav ul {
+		list-style-type: none;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+	}
+	.main-nav li {
+		width: 200px;
 		display: inline-block;
-		padding: 4px 15px;
 	}
 	
+	.side-active {
+		color: white;
+	}
 	.side-bar {
 		display: inline;
 		position: relative;
@@ -110,11 +120,12 @@ img {
 		bottom: 0;
 		overflow: auto;
 	}
-	.side-bar li {
+	.side-bar a {
 		text-align: left;
 	}
 	.main-banner {
-		background: #dfe2e4 url(http://www.lorempixel.com/900/300);
+		background: #dfe2e4 url("../images/banner_1280_300px.png");
+		padding-top: 90px;
 		text-align: center;
 		color: white;
 		width: 100%;
@@ -124,7 +135,6 @@ img {
 	
 	/* Offset for side bar */
 	.main-content {
-		margin-left: 150px;
 	}
 	
 	.f-nav-container {
