--- a/css/style.css
+++ b/css/style.css
@@ -85,10 +85,12 @@ img {
 		padding-top: 0px;
 	}
 	.nav-container {
-		position: relative;
+		position: absolute;
+		top: 300px;
 		width: 100%;
 		text-align: center;
 		padding-top: 0;
+		height: 100%;
 	}
 	.main-nav {
 		width: 100%;
@@ -102,8 +104,9 @@ img {
 		overflow: hidden;
 	}
 	.main-nav li {
-		width: 200px;
+		width: 15%;
 		display: inline-block;
+		padding: 0;
 	}
 	
 	.side-active {
@@ -111,14 +114,15 @@ img {
 	}
 	.side-bar {
 		display: inline;
-		position: relative;
+		position: absolute;
 		float: left;
 		width: 150px;
-		top: 0px;
+		top: 40px;
 		left: 0;
-		padding-top: 20px;
 		bottom: 0;
+		padding-top: 20px;
 		overflow: auto;
+		z-index: -1;
 	}
 	.side-bar a {
 		text-align: left;
@@ -135,6 +139,8 @@ img {
 	
 	/* Offset for side bar */
 	.main-content {
+		margin-left: 150px;
+		margin-top: 50px;
 	}
 	
 	.f-nav-container {
