--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ img {
 		margin-left: auto;
 		margin-right: auto;
 		z-index: 100;
+		display: block;
 	}
 	.main-nav ul {
 		list-style-type: none;
@@ -115,11 +116,11 @@ img {
 		color: white;
 	}
 	.side-bar {
-		display: inline;
-		position: absolute;
+		display: block;
+		position: relative;
 		float: left;
 		width: 150px;
-		top: 40px;
+		top: 0;
 		left: 0;
 		bottom: 0;
 		padding-top: 20px;
